Use ArrayList instead of LinkedList for Corridor nodes.